# pdf2ppt

./: .gitignore  README.md  pdf2ppt.py  pyproject.toml
tests/: test_pdf2ppt.py
